--- a/app/src/main/res/layout/fragment_metar_info_page.xml
+++ b/app/src/main/res/layout/fragment_metar_info_page.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@{viewModel.metar.result == 1 ? viewModel.metar.metarData[0].toString() : @string/elevation}"
+            android:text="@{viewModel.metar.result == 1 ? viewModel.metar.metarData[0].toString() : @string/noData}"
             app:layout_constraintTop_toBottomOf="@id/metarTitle"
             app:layout_constraintStart_toStartOf="@id/metarTitle"/>
 
